# models/post.js
@@ -13,10 +13,12 @@ module.exports = (sequelize, DataTypes) => {
     });
     Post.associate = (db) => {
         db.Post.belongsTo(db.User)
+        db.Post.belongsTo(db.Community)
         db.Post.hasMany(db.Comment)
         db.Post.hasMany(db.Image)
         db.Post.belongsToMany(db.User, { through: 'Like', as: 'Likers' }) // post.addLikers, post.removeLikers, post.getLikers
         db.Post.belongsToMany(db.Hashtag, { through: 'PostHashtag' });
+        db.Post.belongsToMany(db.Communityclass, { through: 'PostClass', as: `Classes` });
 
     }
 
